--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="content">
                 <div class="inner preload">
                     <h1>Oi! Me chamo Maicon</h1>
-                    <p>sou aprendiz em desenvolvimento Front-end</p>
+                    <p>Sprendiz em desenvolvimento Front-end</p>
                 </div>
             </div>
             <nav>
@@ -44,7 +44,7 @@
             <article id="intro" class="hidden">
                 <i class="fa-solid fa-x"></i>
                 <h2 class="major">Sobre mim</h2>
-                <p>Faço cursos em desenvolvimento Front-end, apaixonado por tecnologia, entusiasta da área e decidi seguir tambem o caminho da programação. Buscando sempre meu melhor, estou me dedicando em evoluir nessa área de desenvolvimento Web. Atualmente, trabalho na empresa Floranda Comercio de Flores, formado em Educação Fisica pela Uniasselvi decidi mudar para algo que me sentia mais atraído e no qual me identificava mais. Atualmente estou em busca da minha primeira oportunidade de emprego na área.</p>
+                <p>Faço cursos em desenvolvimento Front-end, apaixonado por tecnologia, entusiasta da área e decidi seguir tambem o caminho da programação. Buscando sempre meu melhor, estou me dedicando em evoluir nessa área de desenvolvimento Web. Atualmente, trabalho na empresa Floranda Comercio de Flores, sou formado em Educação Fisica pela Uniasselvi e procuro conhecimento na área de desenvolvimento por me sento mais atraído.</p>
             </article>
 
             <article id="work" class="hidden">
