--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <article id="intro" class="hidden">
                 <i class="fa-solid fa-x"></i>
                 <h2 class="major">Sobre mim</h2>
-                <p>Faço cursos em desenvolvimento Front-end, apaixonado por tecnologia, entusiasta da área e decidi seguir tambem o caminho da programação. Buscando sempre meu melhor, estou me dedicando em evoluir nessa área de desenvolvimento Web. Atualmente, trabalho na empresa Floranda Comercio de Flores, sou formado em Educação Fisica pela Uniasselvi e procuro conhecimento na área de desenvolvimento por me sento mais atraído.</p>
+                <p>Faço cursos em desenvolvimento Front-end, apaixonado por tecnologia, entusiasta da área, por isso tambem decidi seguir o caminho da programação. Buscando sempre meu melhor, estou me dedicando em evoluir nessa área de desenvolvimento Web. Atualmente, trabalho na empresa Floranda Comercio de Flores e faço um serviço voluntario na parte de TI da Associação de Bombeiros Comunitario de Biguaçu, sou formado em Educação Fisica pela Uniasselvi e procuro conhecimento na área de desenvolvimento por me sento mais atraído.</p>
             </article>
 
             <article id="work" class="hidden">
