correção de erros ortograficos

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             <article id="intro" class="hidden">
                 <i class="fa-solid fa-x"></i>
                 <h2 class="major">Sobre mim</h2>
-                <p>Faço cursos em desenvolvimento Front-end, apaixonado por tecnologia, entusiasta da área, por isso tambem decidi seguir o caminho da programação. Buscando sempre meu melhor, estou me dedicando em evoluir nessa área de desenvolvimento Web. Atualmente, trabalho na empresa Floranda Comercio de Flores e faço serviço voluntario na parte de TI da Associação de Bombeiros Comunitario de Biguaçu, sou formado em Educação Fisica pela Uniasselvi e procuro conhecimento na área de desenvolvimento por me sentir mais atraído.</p>
+                <p>
+                    Faço cursos em desenvolvimento Front-end, apaixonado por tecnologia, entusiasta da área, por isso também decidi seguir o caminho da programação. Buscando sempre meu melhor, estou me dedicando em evoluir nessa área de desenvolvimento Web. Atualmente, trabalho na empresa Floranda Comercio de Flores e faço serviço voluntario na parte de TI da Associação de Bombeiros Comunitário de Biguaçu, sou formado em Educação Física pela Uniasselvi e procuro conhecimento na área de desenvolvimento por me sentir mais atraído.
+                <p>
             </article>
 
             <article id="work" class="hidden">
@@ -85,7 +87,7 @@
                     </div>
                     <ul class="actions">
                         <li><input type="submit" value="Enviar" class="primary" /></li>
-                        <li><input type="reset" value="Reset" /></li>
+                        <li><input type="reset" value="Limpar" /></li>
                     </ul>
                 </form>
                 <ul class="icons">
