botoes novos, whats e instagram

--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@
                     </ul>
                 </form>
                 <ul class="icons">
+                    <li><a href="https://www.instagram.com/maiconrmonteiro/" target="_blank" class="icon brands"><i class="fa-brands fa-instagram"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/maicon-monteiro-5a5a38138/" target="_blank" class="icon brands"><i class="fa-brands fa-linkedin"></i></a></li>
                     <li><a href="https://github.com/maiconrmonteiro" target="_blank" class="icon brands"><i class="fa-brands fa-github"></i></a></li>
+                    <li><a href="https://wa.me/5548984360213?text=Oi%20Maicon,%20preciso%20de%20informa%C3%A7%C3%B5es!%20" target="_blank" class="icon brands"><i class="fa-brands fa-whatsapp"></i></a></li>
                 </ul>
 
             </article>
