--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <li><i class="fa-brands fa-js"></i><p>javascript</p></li>
                     <li><i class="fa-brands fa-github"></i><p>github</p></li>
                     <li><i class="fa-brands fa-git-alt"></i><p>git</p></li>
+                    <li><i class="fa-brands fa-react"></i><p>Aprendendo React</p></li>
                 </ul>
             </article>
 
