--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="content">
                 <div class="inner preload">
                     <h1>Oi! Me chamo Maicon</h1>
-                    <p>Aprendiz em desenvolvimento Front-end</p>
+                    <p>Junior Front End Developer </p>
                 </div>
             </div>
             <nav>
