ajuste do botão

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <ul>
         <li>
-            <a href="quemsou.html"><ion-icon name=""></ion-icon>
+            <a href="quemsou.html">
                 Quem Sou</a>
         </li>
          <li>
