--- a/quemsou.html
+++ b/quemsou.html
@@ -30,13 +30,13 @@
 
     <ul>
         <li>
-            <a href="" target="_black"><ion-icon name=""></ion-icon>
+            <a href="" target="_black">
                 Quem Sou</a>
         </li><br><br>
         <div class="quemsou">
             <h1>Maicon Rodrigues Monteiro</h1>
             <p>
-
+                Casado com a Julia, pai do Davi Luiz Monteiro<br><br>
                 Nasci filho de pescador e desde os 11 anos, comecei a trabalhar, aprendendo desde cedo o valor do esforço e da dedicação. Minha paixão pela tecnologia surgiu cedo e, por isso, decidi seguir o caminho da programação, buscando sempre evoluir nessa área.<br><br>
 
 Formei-me em Educação Física pela Uniasselvi, mas minha verdadeira paixão sempre foi o desenvolvimento, área na qual me sinto mais atraído. <br><br>Trabalhei por mais de 15 anos na empresa Floranda Comércio de Flores e faço serviço voluntário na parte de TI da Associação de Bombeiros Comunitário de Biguaçu, conciliando minha carreira com minha paixão por ajudar a comunidade e por tecnologia.<br><br>
@@ -44,8 +44,8 @@ Formei-me em Educação Física pela Uniasselvi, mas minha verdadeira paixão se
 Hoje, como gerente de marketing da Maizum - Alimentos Prontos Congelados, estou focado em aprimorar meus conhecimentos em design, buscando sempre entregar o melhor em minha carreira profissional. Além disso, sou especializado em tráfego pago, com cursos pela Escola Brasileira de Marketing Digital, sempre em busca de evolução e novos desafios.<br><br><br><br>
             </p>
         </div>
-        <li>
-            <a href="index.html" target="_black"><ion-icon name=""></ion-icon>
+        <li class="btn-voltar">
+            <a href="index.html" target="_black">
                Voltar</a>
         </li>
          
