--- a/quemsou.html
+++ b/quemsou.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
-    <title>DaniDev</title>
+    <title>Monteiro</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
